bottom curved nav

--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -26,6 +26,7 @@
       <ion-col>
         <div class="hero">
           <ion-avatar>
+            <!-- <img src="http://via.placeholder.com/640x360" /> -->
             <img
               src="https://avataaars.io/?avatarStyle=Circle&topType=LongHairStraight&accessoriesType=Blank&hairColor=BrownDark&facialHairType=Blank&clotheType=BlazerShirt&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light"
             />
@@ -36,6 +37,144 @@
           <h2 class="name-txt ion-text-center ion-no-margin">
             Chu Ying, Rebecca
           </h2>
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div class="nav">
+          <ion-grid class="ion-padding-vertical">
+            <ion-row>
+              <ion-col size="4">
+                <ion-button
+                  shape="round"
+                  expand="block"
+                  fill="clear"
+                  class="nav-btn"
+                  color="dark"
+                >
+                  <div>
+                    <ion-icon class="nav-icon" name="cash-outline"></ion-icon>
+                    <br />
+                    <p class="ion-text-wrap ion-text-capitalize ion-no-margin">
+                      Manage ILAS Funds
+                    </p>
+                  </div>
+                </ion-button>
+              </ion-col>
+              <ion-col size="4">
+                <ion-button
+                  shape="round"
+                  expand="block"
+                  fill="clear"
+                  class="nav-btn ion-margin-top"
+                  color="dark"
+                >
+                  <div>
+                    <ion-icon
+                      class="nav-icon"
+                      name="receipt-outline"
+                    ></ion-icon>
+                    <br />
+                    <p class="ion-text-wrap ion-text-capitalize ion-no-margin">
+                      Claims
+                    </p>
+                  </div>
+                </ion-button>
+              </ion-col>
+              <ion-col size="4">
+                <ion-button
+                  shape="round"
+                  expand="block"
+                  fill="clear"
+                  class="nav-btn"
+                  color="dark"
+                >
+                  <div>
+                    <ion-icon
+                      class="nav-icon"
+                      name="document-text-outline"
+                    ></ion-icon>
+                    <br />
+                    <p class="ion-text-wrap ion-text-capitalize ion-no-margin">
+                      Policy Servicing
+                    </p>
+                  </div>
+                </ion-button>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div class="policies">
+          <h3 class="ion-text-center ion-margin-top policies-title">
+            Coverage from 4 Policies
+          </h3>
+          <ion-icon
+            class="policies-chevron"
+            name="chevron-forward-outline"
+          ></ion-icon>
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div class="policies-icons">
+          <ion-grid>
+            <ion-row>
+              <ion-col size="6">
+                <div class="icons ion-text-center">
+                  <ion-avatar>
+                    <img src="" />
+                  </ion-avatar>
+                  <h3>Life</h3>
+                  <p>HKD 6,146,066</p>
+                </div>
+              </ion-col>
+              <ion-col size="6">
+                <div class="icons ion-text-center">
+                  <ion-icon name="add"></ion-icon>
+                  <h3>Life</h3>
+                  <p>HKD 6,146,066</p>
+                </div>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col size="6">
+                <div class="icons ion-text-center">
+                  <ion-icon name="add"></ion-icon>
+                  <h3>Life</h3>
+                  <p>HKD 6,146,066</p>
+                </div>
+              </ion-col>
+              <ion-col size="6">
+                <div class="icons ion-text-center">
+                  <ion-icon name="add"></ion-icon>
+                  <h3>Life</h3>
+                  <p>HKD 6,146,066</p>
+                </div>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div class="note ion-text-center ion-margin-top">
+          <ion-label>
+            *Additional coverages detailed in provision
+          </ion-label>
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div class="assets-card ion-padding ion-margin-top">
+          <h1>Assets</h1>
         </div>
       </ion-col>
     </ion-row>
