--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -125,36 +125,34 @@
         <div class="policies-icons">
           <ion-grid>
             <ion-row>
-              <ion-col size="6">
-                <div class="icons ion-text-center">
-                  <ion-avatar>
-                    <img src="" />
-                  </ion-avatar>
-                  <h3>Life</h3>
-                  <p>HKD 6,146,066</p>
+              <ion-col size="6" class="ion-padding">
+                <div class="policy-icons ion-text-center">
+                  <ion-icon class="policy-icon" name="add"></ion-icon>
+                  <h5 class="ion-no-margin policy-title">Life</h5>
+                  <p class="ion-no-margin policy-desc">HKD 6,146,066</p>
                 </div>
               </ion-col>
-              <ion-col size="6">
-                <div class="icons ion-text-center">
-                  <ion-icon name="add"></ion-icon>
-                  <h3>Life</h3>
-                  <p>HKD 6,146,066</p>
+              <ion-col size="6" class="ion-padding">
+                <div class="policy-icons ion-text-center">
+                  <ion-icon class="policy-icon" name="add"></ion-icon>
+                  <h5 class="ion-no-margin policy-title">Critical Illness</h5>
+                  <p class="ion-no-margin policy-desc">up to HKD 6,146,066</p>
                 </div>
               </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col size="6">
-                <div class="icons ion-text-center">
-                  <ion-icon name="add"></ion-icon>
-                  <h3>Life</h3>
-                  <p>HKD 6,146,066</p>
+              <ion-col size="6" class="ion-padding">
+                <div class="policy-icons ion-text-center">
+                  <ion-icon class="policy-icon" name="add"></ion-icon>
+                  <h5 class="ion-no-margin policy-title">Medical & Hosp.</h5>
+                  <p class="ion-no-margin policy-desc">
+                    up to HKD 6,146,066/year, HKD 600,000/disability
+                  </p>
                 </div>
               </ion-col>
-              <ion-col size="6">
-                <div class="icons ion-text-center">
-                  <ion-icon name="add"></ion-icon>
-                  <h3>Life</h3>
-                  <p>HKD 6,146,066</p>
+              <ion-col size="6" class="ion-padding">
+                <div class="policy-icons ion-text-center">
+                  <ion-icon class="policy-icon" name="add"></ion-icon>
+                  <h5 class="ion-no-margin policy-title">Accident</h5>
+                  <p class="ion-no-margin policy-desc">up to HKD 6,146,066</p>
                 </div>
               </ion-col>
             </ion-row>
@@ -162,8 +160,8 @@
         </div>
       </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col>
+    <ion-row class="note-row">
+      <ion-col class="ion-padding">
         <div class="note ion-text-center ion-margin-top">
           <ion-label>
             *Additional coverages detailed in provision
@@ -173,8 +171,46 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <div class="assets-card ion-padding ion-margin-top">
-          <h1>Assets</h1>
+        <div class="assets-card">
+          <ion-grid>
+            <ion-row class="assets-header">
+              <ion-col size="6">
+                <h2>Assets</h2>
+              </ion-col>
+              <ion-col size="6">
+                <div class="asset-box">
+                  <p class="ion-text-right">
+                    <span>Total</span>
+                    <strong> HKD 255,309 </strong>
+                  </p>
+                </div>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <div class="assets-list">
+                  <ion-list lines="none">
+                    <ion-item detail="true" class="asset-item ion-no-margin">
+                      <ion-label class="assets-detail ion-text-left">
+                        Investment-Linked
+                      </ion-label>
+                      <ion-label class="assets-value ion-text-right">
+                        HKD 10,539
+                      </ion-label>
+                    </ion-item>
+                    <ion-item detail="true" class="asset-item ion-no-margin">
+                      <ion-label class="assets-detail ion-text-left">
+                        Savings
+                      </ion-label>
+                      <ion-label class="assets-value ion-text-right">
+                        HKD 161,688
+                      </ion-label>
+                    </ion-item>
+                  </ion-list>
+                </div>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
         </div>
       </ion-col>
     </ion-row>
