expanded dashboard initial setup

--- a/src/app/dashboard/nav/nav-item/nav-item.component.html
+++ b/src/app/dashboard/nav/nav-item/nav-item.component.html
@@ -4,6 +4,8 @@
   fill="clear"
   class="nav-btn"
   color="dark"
+  [routerLink]="link"
+  [routerLinkActive]="['active']"
 >
   <div>
     <ng-content select=".nav-icon"></ng-content>
