--- a/src/app/dashboard/user-hero/user-hero.component.html
+++ b/src/app/dashboard/user-hero/user-hero.component.html
@@ -1,4 +1,4 @@
-<div class="hero">
+<div class="hero" (click)="goToDashboard()">
   <ion-avatar>
     <!-- <img src="http://via.placeholder.com/640x360" /> -->
     <ion-img (ionError)="imageError($event)" [src]="user.avatar"></ion-img>
