2nd page completed

--- a/src/app/expanded-dashboard/expanded-dashboard.page.html
+++ b/src/app/expanded-dashboard/expanded-dashboard.page.html
@@ -32,5 +32,12 @@
         <app-nav></app-nav>
       </ion-col>
     </ion-row>
+    <ion-row>
+      <ion-col>
+        <app-policy-services
+          [policyServices]="policyServices"
+        ></app-policy-services>
+      </ion-col>
+    </ion-row>
   </ion-grid>
 </ion-content>
