3rd page completed

--- a/src/app/dashboard/nav/nav.component.scss
+++ b/src/app/dashboard/nav/nav.component.scss
@@ -1,7 +1,7 @@
 div.nav {
   margin-top: -65px;
   // background: linear-gradient(rgba(234, 188, 4, 0.9), rgba(234, 188, 4, 1));
-  background: rgba(234, 188, 4, 1);
+  background: #eaab00;
   border-bottom-left-radius: 50% 35%;
   border-bottom-right-radius: 50% 35%;
 
