--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -6,7 +6,7 @@
   /** primary **/
   --ion-color-primary: #eaab00;
   --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast: #003946;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
