--- a/src/app/dashboard/assets-list/asset/asset.component.html
+++ b/src/app/dashboard/assets-list/asset/asset.component.html
@@ -1,5 +1,5 @@
-<ion-item detail="true" class="asset-item ion-no-margin">
-  <ion-label class="assets-detail ion-text-left">
+<ion-item detail="true" class="asset-item ion-no-margin ion-no-padding">
+  <ion-label class="assets-detail ion-text-left ion-text-wrap">
     {{ asset.name }}
   </ion-label>
   <ion-label class="assets-value ion-text-right">
