--- a/src/app/expanded-dashboard/policy-services/policy-services.component.html
+++ b/src/app/expanded-dashboard/policy-services/policy-services.component.html
@@ -2,6 +2,7 @@
   <ion-list lines="none">
     <ng-container *ngFor="let policyService of policyServices">
       <ion-item-divider
+        mode="md"
         class="header-divider ion-margin-top ion-margin-start ion-margin-end"
       >
         <ion-icon
@@ -20,7 +21,7 @@
         </ion-item>
       </ng-container>
 
-      <ion-item-divider class="bottom-divider"> </ion-item-divider>
+      <ion-item-divider mode="md" class="bottom-divider"> </ion-item-divider>
     </ng-container>
   </ion-list>
 </div>
