--- a/src/app/policy-details/policy-details.page.html
+++ b/src/app/policy-details/policy-details.page.html
@@ -17,5 +17,12 @@
         ></app-detail>
       </ion-col>
     </ion-row>
+    <ion-row>
+      <ion-col>
+        <p class="foot-note ion-text-center">
+          *excluding pending fund transactions
+        </p>
+      </ion-col>
+    </ion-row>
   </ion-grid>
 </ion-content>
