--- a/src/app/expanded-dashboard/expanded-dashboard.page.scss
+++ b/src/app/expanded-dashboard/expanded-dashboard.page.scss
@@ -13,7 +13,7 @@ ion-header {
   ion-badge.notifications-badge {
     background-color: red;
     position: absolute;
-    top: -3px;
+    top: 0;
     right: -3px;
     border-radius: 100%;
     font-size: 0.7em;
